--- a/index.html
+++ b/index.html
@@ -141,18 +141,19 @@
             var DayOfMonth = dt.getDate()
             var month = dt.getMonth()
             if(month==11){
-                if (DayOfMonth >= parseInt(day) & DayOfMonth < 26)
-                {
+                if (DayOfMonth >= parseInt(day) & DayOfMonth < 26){
                     // URL of the image
-                    var imageUrl = "images/i" + day + ".jpg"; 
+                    var ep = ".jpg"
+
+                    var imageUrl = "images/i" + day + ep; 
                      
                 }
                 else{
-                    var imageUrl = "images/nopeeking.jpg"
+                    var imageUrl = "images/nopeeking.jpg";
                 }
             }
             else{
-                var imageUrl = "images/nopeeking.jpg"
+                var imageUrl = "images/nopeeking.jpg";
             }
             // Opening a new popup window with the image
             window.open(URL=imageUrl, name="_blank", specs="titlebar=0,status=0,menubar=0,toolbar=0,width=600,height=400");
