Update index.html youtube
Add a link to Rose's recital

--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
                     var ep = ".jpg"
 
                     var imageUrl = "images/i" + day + ep; 
+                    if(day==20){
+                        imageUrl="https://youtu.be/vA4PXiSXdjE"
+                    }
                      
                 }
                 else{
