--- a/index.html
+++ b/index.html
@@ -144,8 +144,12 @@
                 if (DayOfMonth >= parseInt(day) & DayOfMonth < 26){
                     // URL of the image
                     var ep = ".jpg"
+                    
 
                     var imageUrl = "images/i" + day + ep; 
+                    if (day==20){
+                        imageUrl="https://youtu.be/vA4PXiSXdjE"
+                    }
                      
                 }
                 else{
