--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
                     if(day==20){
                         imageUrl="https://youtu.be/vA4PXiSXdjE"
                     }
+                    if(day==24){
+                        imageUrl="https://www.youtube.com/watch?v=LmRHwcPnEdw&list=PL4_L_C_Q4ad9zdb3TprMFb4aHvZUn8kCy&index=2"
+                        
+                    }
                      
                 }
                 else{
