--- a/index.html
+++ b/index.html
@@ -59,10 +59,20 @@
     </style>
 </head>
 
-<body style="background-image: url('images/snow.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;">
+<body style="background-image: url('images/snow.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;" onload="setAdyear()">
     
-    <div class=center style="font-size: 60px; width: 600px; height: 80px; align-content: center;">
-        2024 Advent Calendar
+    <div>
+        <div class=center style="font-size: 60px; width: 600px; height: 80px; align-content: center; padding-left: 15%;">
+            Advent Calendar
+        </div>
+        <div class="center" style="font-size: 40px; width: 600px; height: 80px; align-content: center; padding-left: 10%;">
+            <p style="font-size: 25px">
+                Select Year
+                <input id="adyear" style="font-size: 25px" type="number" min=2024>
+                 & Click On The Day
+                </input>
+            </p>
+        </div>
     </div>
     <div>
         <img id="imgstar" src="images/star.png" alt="star 1" class="center" width="80px" height="80px" style="padding-right: 30px;">
@@ -136,17 +146,26 @@
     </div>
 
     <script>
+        function setAdyear() {
+            var dt = new Date()
+            var cyr = parseInt(dt.getFullYear())
+            elm=document.getElementById("adyear")
+            elm.max = cyr
+            elm.value = cyr
+            elm.min = 2024
+        }
         function openPopup(day) {
             var dt = new Date()
             var DayOfMonth = dt.getDate()
             var month = dt.getMonth()
+            var year = document.getElementById("adyear").value
             if(month==11){
-                if (DayOfMonth >= parseInt(day) & DayOfMonth < 26){
+                if (parseInt(day) <= DayOfMonth & DayOfMonth < 26){
                     // URL of the image
                     var ep = ".jpg"
                     
 
-                    var imageUrl = "images/i" + day + ep; 
+                    var imageUrl = "images/i_" + year + "_" + day + ep; 
                     if(day==20){
                         imageUrl="https://youtu.be/vA4PXiSXdjE"
                     }
